-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, openjdk8u422
-
Component/s: hotspot
-
b02
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8360974 | shenandoah8u442 | Andrei Pangin | P4 | Resolved | Fixed | b02 |
This is another manifestation of the same issue as in JDK-8329103. This time, however, production JVM crashes, not a debug build.
The reason is `in_asgct` flag is not reset correctly when AsyncGetCallTrace() is called recursively. The fix is similar toJDK-8329103.
The reason is `in_asgct` flag is not reset correctly when AsyncGetCallTrace() is called recursively. The fix is similar to
- backported by
-
JDK-8360974 [8u] Profiler crashes at guarantee(is_result_safe || is_in_asgct()): unsafe access to zombie method
-
- Resolved
-
- relates to
-
JDK-8329103 assert(!thread->in_asgct()) failed during multi-mode profiling
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/7e1ea515
-
Review(master)
openjdk/jdk8u-dev/568