hotspot/src/share/vm/prims/forte.cpp
@@ -553,7 +553,8 @@ void AsyncGetCallTrace(ASGCT_CallTrace *trace, jint depth, void* ucontext) {
     return;
   }
 
-  // !important! make sure all to call thread->set_in_asgct(false) before every return
+  // !important! make sure all to call thread->set_in_asgct(saved_in_asgct) before every return
+  bool saved_in_asgct = thread->in_asgct();
   thread->set_in_asgct(true);
 
   switch (thread->thread_state()) {
@@ -613,7 +614,7 @@ void AsyncGetCallTrace(ASGCT_CallTrace *trace, jint depth, void* ucontext) {
     trace->num_frames = ticks_unknown_state; // -7
     break;
   }
-  thread->set_in_asgct(false);
+  thread->set_in_asgct(saved_in_asgct);
 }
 
 
